@@ -4,6 +4,7 @@
 	(epackage-lint-extra-buffer-run-lm): Add 'ends here' check.
 	(epackage-devel-information-license-gpl-standard): Increase
 	search from 70 lines to 400.
+	(epackage-interactive-p): New. Emacs 23.3 compatibility.
 
 2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>
 
